# pod2-kudos-client-app

./: .gitignore  README.md  create_signature.sh
github_scraper/: Cargo.toml
github_scraper/src/: lib.rs
main/: Cargo.toml  group_list.json  group_pod.json  init.sh  main_pod_metadata.json  main_rsa_pod.json  metadata.json  new_main_pod.json  rsa_pod.json  rsa_pod_metadata.json  rsa_vd.json  send_pod_kudos.sh  test_group_pod.json
main/signature/: github_rsa.sig
main/src/: main.rs
